--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -414,6 +414,19 @@ h6,
 #header1-0 .mbr-section-lead {
   font-size: 18px;
 }
+#header1-0 .mbr-section-title {
+  font-size: 60px;
+}
+#msg-box8-3 .mbr-section-title,
+#msg-box8-3 p {
+  color: #fff;
+}
+#features6-4 P {
+  text-align: left;
+}
+#features6-4 H4 {
+  font-size: 18px;
+}
 #msg-box3-2 .mbr-section-title,
 #msg-box3-2 p {
   color: #000;
